--- a/src/App.css
+++ b/src/App.css
@@ -18,17 +18,16 @@
 
 /* Color */
 :root {
-  --p50: #eaf4ff;
-  --p100: #c8e0ff;
-  --p200: #a5ccff;
-  --p300: #82b7ff;
-  --p400: #5fa3ff;
-  --p500: #3e97ff;
-  --p500a: #3e97ff16;
-  --p600: #347dce;
-  --p700: #2a62a0;
-  --p800: #21497a;
-  --p900: #182e50;
+  --p50: #d7f3ff;
+  --p100: #b9ecff;
+  --p200: #88e2ff;
+  --p300: #50cfff;
+  --p400: #28b3ff;
+  --p500: #0693ff;
+  --p600: #0a7eeb;
+  --p700: #0f64be;
+  --p800: #135695;
+  --p900: #11345a;
   --p1000: #061d36;
   --p1100: #02101d;
 
